# path-changer

./: README.md  setup.cfg
src/path_changer/: path_changer.py
src/path_changer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
