[metadata]
name = path_changer
version = 1.0.1
author = Mickaël Descamps
author_email = mickael.descamps@mineyou.fr
description = A small package to add path of project to the list of path
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MickaelDescamps/path_changer
project_urls =
    Bug Tracker = https://github.com/MickaelDescamps/path_changer
    repository = https://github.com/MickaelDescamps/path_changer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
